--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --prod output-path docs --base-href /catalogo-filmes-angular/"
+    "deploy:ghdocs": "ng build --prod output-path docs --base-href /catalogo-filmes-angular/"
   },
   "private": true,
   "dependencies": {
